fix alignment on experiences

--- a/src/experiences/experiences.css
+++ b/src/experiences/experiences.css
@@ -70,6 +70,10 @@
     column-gap: 1rem;
 }
 
+.qualification__data:nth-child(odd) .qualification__headline {
+    justify-content: end;
+}
+
 .qualification__title {
     font-size: var(--normal-font-size);
     font-weight: var(--font-medium);
